feat: Update project name and description
Renames the project to "Vivazza Talca | Pizza Lab & Arcade" to accurately reflect its updated scope and features, including the arcade component. Updates metadata.json and package.json accordingly.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fábrica-de-pizzas-vivazza",
+  "name": "vivazza-talca-|-pizza-lab-&-arcade",
   "private": true,
   "version": "0.0.0",
   "type": "module",
